# mlops_project

./: .env.default  .gitignore  test.ipynb  testt.py
feature-pipeline/: pyproject.toml
feature-pipeline/feature_pipeline/: clean_feature_store.py  feature_view.py  pipeline.ipynb  pipeline.py  utils.py
feature-pipeline/python3.9_env/Scripts/: activate.bat
python3.9_env/Scripts/: activate
test/: pyproject.toml
training-pipeline/: pyproject.toml
training-pipeline/training_pipeline/: data.py  hyperparameter_tuning.py
