[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["Bavenraj <bavenraj08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pendulum = "^3.0.0"
hopsworks = "3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
